--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 
 :root {
+    width: 100vw;
     --main__color: #000000;
     --secundary__color: #f6f6f6;
-    --tirdy__color: aqua;
+    --tirdy__color: #00ffff;
     --hover__color: #262626;
+    --tirdy__color__variant: #0CE8AA;
     --font__size__primary: 1.875rem;
     --font__size__secundary: 1.5rem;
     --font__size__tirdy: 1.1rem;
+    --font__size__tirdy__media: 0.8rem;
     --font__size__forthy: 0.8rem;
+    --font__size__forthy__media: 1rem;
+}
+
+a {
+    text-decoration: none;
 }
 
 * {
@@ -39,7 +47,7 @@ body {
 }
 
 strong {
-    color: var(--tirdy__color);
+    color: var(--tirdy__color__variant);
 }
 
 .presentation {
@@ -95,10 +103,9 @@ strong {
     padding: 2.5%;
     display: flex;
     justify-content: center;
-    width: 60%;
+    width: 65%;
     border-radius: 8px;
-    border: 2px solid;
-    border-color: var(--tirdy__color);
+    border: 2px solid var(--tirdy__color__variant);
 }
 
 .presentation__text__links__link__icon__insta{
@@ -119,12 +126,14 @@ strong {
 .presentation__text__links__link:hover{
     background-color: var(--hover__color);
     font-weight: bolder;
-    width: 63%;
+    width: 68%;
 }
 
 .presentation__img{
     width: 40%;
     height: auto;
+    align-items: top;
+    justify-content: start;
 }
 
 .imgg{
@@ -143,26 +152,66 @@ strong {
     text-align: center;
 }
 
-@media ( max-width: 1150px) {
+/*cv*/
+
+.cv__main{
+margin: 2%;
+display: grid;
+grid-template-columns: 1fr 2fr 2fr;
+}
+
+.cv__img__container {
+    display: flex;
+    width: 100%;
+}
+
+.cv__img {
+    width: 100%;
+    height: 100%;
+}
+
+.cv__title {
+    color: var(--tirdy__color__variant);
+    font-family: 'montSerrat',sans-serif;
+    font-size: 2.2rem;
+}
+
+.cv__p {
+    color: #F6F6F6;
+    font-size: 1.3rem;   
+    font-family: 'Montserrat', sans-serif;
+}
+
+.cv__block {
+    margin: 2%;
+}
+
+
+@media ( max-width: 750px) {
 
     .menu {
         display: flex;
-        padding-top: 4%;
-        gap: 5%
-        justify-content: center;
+        padding-top: 4%;
+        padding-left: 16.8%;
+        padding-right: 3%;
+        gap: 8%;
+        justify-content: start;
+        justify-content: space-between;
     }
     
     .menu__item {
-        font-size: var(--font__size__forthy);
+        font-size: var(--font__size__forthy__media);
     }
 
     .presentation {
         flex-direction: column-reverse;
         padding: 1%;
+        width: 87%;
     }
 
     .presentation__text{
-        width: 80%;
+        width: 100%;
+        margin: 0% 0% 0% 30%;
     }
 
     .presentation__img {
@@ -170,6 +219,21 @@ strong {
     }
 
     .imgg {
+        width: 100%;
+    }
+
+    .cv__main {
+        display: flex;
+        flex-direction: column;
+        margin-left: 19%;
+        gap: 2em;
+    }
+
+    .cv__img__container {
+        width: 65%;
+    }
+
+    .cv__img {
         width: 100%;
     }
 }
