--- a/styles/style.css
+++ b/styles/style.css
@@ -32,11 +32,17 @@ a {
 }
 
 .menu__item {
+    transition: all 0.3s;
     text-decoration: none;
     color: var(--tirdy__color);
     font-size: var(--font__size__secundary);
-    font-family: 'montSerrat',sans-serif;
+    font-family: 'montSerrat', sans-serif;
     font-weight: 600;
+}
+
+.menu__item:hover {
+    transition: all 0.3s;
+    font-size: var(--font__size__primary);
 }
 
 body {
@@ -74,16 +80,16 @@ strong {
 
 .presentation__text__2 {
     margin: 3%;
-    font-size: var(--font__size__secundary);   
+    font-size: var(--font__size__secundary);
     font-family: 'Montserrat', sans-serif;
 }
 
 .presentation__text__links {
-    margin:5%;
+    margin: 5%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    align-items:center ;
+    align-items: center;
     gap: 25px;
 }
 
@@ -94,7 +100,7 @@ strong {
     font-weight: 100;
 }
 
-.presentation__text__links__link {  
+.presentation__text__links__link {
     transition: all 0.2s;
     font-size: var(--font__size__tirdy);
     font-family: 'Montserrat', sans-serif;
@@ -107,9 +113,10 @@ strong {
     width: 65%;
     border-radius: 8px;
     border: 2px solid var(--tirdy__color__variant);
+    align-items: center;
 }
 
-.presentation__text__links__link__icon__insta{
+.presentation__text__links__link__icon__insta {
     display: flex;
     justify-content: center;
     width: 10%;
@@ -124,27 +131,27 @@ strong {
     height: 8%;
 }
 
-.presentation__text__links__link:hover{
+.presentation__text__links__link:hover {
     transition: all 0.2s;
     background-color: var(--hover__color);
     font-weight: bolder;
     width: 68%;
 }
 
-.presentation__img{
+.presentation__img {
     width: 40%;
     height: auto;
     align-items: top;
     justify-content: start;
 }
 
-.imgg{
+.imgg {
     margin: 2%;
-    width: 98%;   
+    width: 98%;
     height: auto;
 }
 
-.rodape{
+.rodape {
     background-color: var(--tirdy__color);
     color: var(--main__color);
     font-family: 'montSerrat', sans-serif;
@@ -155,10 +162,11 @@ strong {
 
 /*cv*/
 
-.cv__main{
-padding: 1%;
-display: grid;
-grid-template-columns: 1fr 2fr 2fr;
+.cv__main {
+    margin-top: 8%;
+    padding: 1%;
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr;
 }
 
 .cv__img__container {
@@ -176,18 +184,18 @@ grid-template-columns: 1fr 2fr 2fr;
 
 .cv__title {
     color: var(--tirdy__color__variant);
-    font-family: 'montSerrat',sans-serif;
+    font-family: 'montSerrat', sans-serif;
     font-size: 2.2rem;
 }
 
-.cv__p{
+.cv__p {
     width: fit-content;
     color: #F6F6F6;
-    font-size: 1.3rem;   
+    font-size: 1.3rem;
     font-family: 'Montserrat', sans-serif;
 }
 
-.cv__block{
+.cv__block {
     display: flex;
     flex-direction: column;
     gap: 0.3rem;
@@ -197,11 +205,11 @@ grid-template-columns: 1fr 2fr 2fr;
     width: fit-content;
     transition: all 0.2s;
     color: #F6F6F6;
-    font-size: 1.3rem;   
+    font-size: 1.3rem;
     font-family: 'Montserrat', sans-serif;
 }
 
-.cv__a:hover{
+.cv__a:hover {
     background-color: var(--hover__color);
     transition: all 0.2s;
     font-size: 1.8rem;
@@ -211,7 +219,7 @@ grid-template-columns: 1fr 2fr 2fr;
     border: 0.2px solid var(--tirdy__color);
 }
 
-@media ( max-width: 750px) {
+@media (max-width: 750px) {
 
     .menu {
         display: flex;
@@ -222,7 +230,7 @@ grid-template-columns: 1fr 2fr 2fr;
         justify-content: start;
         justify-content: space-between;
     }
-    
+
     .menu__item {
         font-size: var(--font__size__forthy__media);
     }
@@ -233,7 +241,7 @@ grid-template-columns: 1fr 2fr 2fr;
         width: 87%;
     }
 
-    .presentation__text{
+    .presentation__text {
         width: 100%;
         margin: 0% 0% 0% 30%;
     }
@@ -254,10 +262,12 @@ grid-template-columns: 1fr 2fr 2fr;
     }
 
     .cv__img__container {
+        margin: 3%;
+        padding: 1%;
         width: 65%;
     }
 
     .cv__img {
-        width: 100%;
+        height: 40%;
     }
 }
