--- a/styles/style.css
+++ b/styles/style.css
@@ -4,8 +4,8 @@
     width: 100vw;
     --main__color: #000000;
     --secundary__color: #f6f6f6;
-    --tirdy__color: #00ffff;
-    --hover__color: #262626;
+    --tirdy__color: rgb(0, 255, 255);
+    --hover__color: #2626267e;
     --tirdy__color__variant: #0CE8AA;
     --font__size__primary: 1.875rem;
     --font__size__secundary: 1.5rem;
@@ -22,133 +22,18 @@ a {
 * {
     margin: 0;
     padding: 0;
-}
-
-.menu {
-    display: flex;
-    padding-top: 4%;
-    padding-left: 14.75%;
-    gap: 5%;
-}
-
-.menu__item {
-    transition: all 0.3s;
-    text-decoration: none;
-    color: var(--tirdy__color);
-    font-size: var(--font__size__secundary);
-    font-family: 'montSerrat', sans-serif;
-    font-weight: 600;
-}
-
-.menu__item:hover {
-    transition: all 0.3s;
-    font-size: var(--font__size__primary);
+    overflow-x: hidden;
 }
 
 body {
     box-sizing: border-box;
     width: 100%;
-    background-color: var(--main__color);
+    background-image: linear-gradient(300deg, #000000, #000016);
     color: var(--secundary__color);
 }
 
 strong {
     color: var(--tirdy__color__variant);
-}
-
-.presentation {
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    padding: 8%;
-    justify-content: space-evenly;
-}
-
-.presentation__text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 40%;
-    height: auto;
-}
-
-.presentation__text__1 {
-    margin: 3%;
-    font-size: var(--font__size__primary);
-    font-family: 'Krona One', sans-serif;
-}
-
-.presentation__text__2 {
-    margin: 3%;
-    font-size: var(--font__size__secundary);
-    font-family: 'Montserrat', sans-serif;
-}
-
-.presentation__text__links {
-    margin: 5%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    gap: 25px;
-}
-
-
-.presentation__text__links__text {
-    font-size: var(--font__size__tirdy);
-    font-family: 'Krona One', sans-serif;
-    font-weight: 100;
-}
-
-.presentation__text__links__link {
-    transition: all 0.2s;
-    font-size: var(--font__size__tirdy);
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-    text-decoration: none;
-    color: var(--secundary__color);
-    padding: 2.5%;
-    display: flex;
-    justify-content: center;
-    width: 65%;
-    border-radius: 8px;
-    border: 2px solid var(--tirdy__color__variant);
-    align-items: center;
-}
-
-.presentation__text__links__link__icon__insta {
-    display: flex;
-    justify-content: center;
-    width: 10%;
-    height: 10%;
-    margin: 1%;
-}
-
-.presentation__text__links__link__icon__whats {
-    justify-content: center;
-    width: 8%;
-    margin: 1%;
-    height: 8%;
-}
-
-.presentation__text__links__link:hover {
-    transition: all 0.2s;
-    background-color: var(--hover__color);
-    font-weight: bolder;
-    width: 68%;
-}
-
-.presentation__img {
-    width: 40%;
-    height: auto;
-    align-items: top;
-    justify-content: start;
-}
-
-.imgg {
-    margin: 2%;
-    width: 98%;
-    height: auto;
 }
 
 .rodape {
@@ -160,114 +45,167 @@ strong {
     text-align: center;
 }
 
-/*cv*/
+@media (min-width: 751px) {
 
-.cv__main {
-    margin-top: 8%;
-    padding: 1%;
-    display: grid;
-    grid-template-columns: 1fr 2fr 2fr;
-}
+    /*header*/
 
-.cv__img__container {
-    display: flex;
-    margin: 10%;
-    width: 90%;
-    margin-left: 0px;
-    padding: 10%;
-    padding-top: 3%;
-}
+    header {
+        width: 100vw;
+        height: 20vh;
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+    }
 
-.cv__img {
-    width: 90%;
-}
+    .logo__img {
+        display: flex;
+        height: 100%;
+        justify-content: center;
+    }
 
-.cv__title {
-    color: var(--tirdy__color__variant);
-    font-family: 'montSerrat', sans-serif;
-    font-size: 2.2rem;
-}
+    .logo__container__anchor {
+        text-align: center;
+        display: inline-block;
+        height: 100%;
 
-.cv__p {
-    width: fit-content;
-    color: #F6F6F6;
-    font-size: 1.3rem;
-    font-family: 'Montserrat', sans-serif;
-}
+    }
 
-.cv__block {
-    display: flex;
-    flex-direction: column;
-    gap: 0.3rem;
-}
+    .logo__container {
+        display: flex;
+        height: 100%;
+        justify-content: center;
+    }
 
-.cv__a {
-    width: fit-content;
-    transition: all 0.2s;
-    color: #F6F6F6;
-    font-size: 1.3rem;
-    font-family: 'Montserrat', sans-serif;
-}
+    .nav__button {
+        display: none;
+    }
 
-.cv__a:hover {
-    background-color: var(--hover__color);
-    transition: all 0.2s;
-    font-size: 1.8rem;
-    padding: 0.3%;
-    margin: 0.25%;
-    border-radius: 8px;
-    border: 0.2px solid var(--tirdy__color);
+    .nav__list {
+        display: flex;
+        gap: 1rem;
+        width: 100%;
+    }
+
+    .nav__container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .nav__item {
+        transition: all 0.5s;
+        text-decoration: none;
+        color: var(--tirdy__color);
+        font-family: 'Mont-Serrat', sans-serif;
+        font-weight: 500;
+        border-left: 2.5px solid var(--tirdy__color);
+        background-image: linear-gradient(45deg, #2626267e, transparent);
+        padding: 0.5% 15% 0.5% 3%;
+        align-items: center;
+        width: 100%;
+    }
+
+    .nav__item:hover{
+        transition: all 0.3s;
+        border: 0.1px solid transparent;
+        border-left: 5px solid var(--tirdy__color);
+    }
+
+    /*header end*/
+
 }
 
 @media (max-width: 750px) {
 
-    .menu {
+    /*header*/
+
+    header {
+        width: 100vw;
+        height: 15vh;
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+    }
+
+    .logo__img {
         display: flex;
-        padding-top: 4%;
-        padding-left: 16.8%;
-        padding-right: 3%;
-        gap: 8%;
-        justify-content: start;
-        justify-content: space-between;
-    }
-
-    .menu__item {
-        font-size: var(--font__size__forthy__media);
-    }
-
-    .presentation {
-        flex-direction: column-reverse;
-        padding: 1%;
-        width: 87%;
-    }
-
-    .presentation__text {
-        width: 100%;
-        margin: 0% 0% 0% 30%;
-    }
-
-    .presentation__img {
-        width: 65%;
-    }
-
-    .imgg {
         width: 100%;
     }
 
-    .cv__main {
+    .logo__container__anchor {
+        text-align: center;
+        display: flex;
+        width: 60%;
+    }
+
+    .logo__container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .nav__button {
+        transition: all 0.5s;
+        border: none;
+    }
+
+    .nav__container {
+        transition: all 0.5s;
         display: flex;
         flex-direction: column;
-        margin-left: 19%;
-        gap: 2em;
+        align-items: end;
+        justify-content: space-around;
+        height: 100%;
     }
 
-    .cv__img__container {
-        margin: 3%;
-        padding: 1%;
-        width: 65%;
+    .nav__button {
+        transition: all 0.5s;
+        background-color: transparent;
+        height: 25%;
+        padding-right: 10%;
     }
 
-    .cv__img {
-        height: 40%;
+    .nav__icon {
+        transition: all 0.5s;
+        background-color: transparent;
+        height: 80%;
     }
+
+
+    .nav__list {
+        transition: all 0.5s;
+        display: none;
+        flex-direction: column;
+        gap: 0.5rem;
+        width: 100%;
+    }
+
+    .nav__item {
+        transition: all 0.5s;
+        text-decoration: none;
+        color: var(--tirdy__color);
+        font-family: 'Mont-Serrat', sans-serif;
+        font-weight: 500;
+        padding-left: 5%;
+        width: 100%;
+        border-left: 2px solid var(--tirdy__color);
+        background-image: linear-gradient(9deg, #2626267e, transparent);
+    }
+
+    #navContainer {
+        transition: all 1s;
+    }
+
+    #navList {
+        transition: all 1s;
+    }
+
+    #header {
+        transition: all 1s;
+    }
+
+    #navButton {
+        transition: all 1s;
+    }
+
+    /*header end*/
+
 }
