--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,3 @@
-
 .presentation {
     box-sizing: border-box;
     display: flex;
@@ -96,24 +95,33 @@
     height: auto;
 }
 
-@media (max-width: 750px){
-    
+@media (max-width: 750px) {
+
     .presentation {
         flex-direction: column-reverse;
         padding: 1%;
-        width: 87%;
+        width: 90vw;
     }
 
     .presentation__text {
         width: 100%;
-        margin: 0% 0% 0% 30%;
+        padding: 0% 5% 0% 5%;
+    }
+
+    .presentation__text__1 {
+        text-align: center;
     }
 
     .presentation__img {
-        width: 65%;
+        display: flex;
+        justify-content: center;
+        height: 35vh;
+        width: 90%;
+        justify-self: center;
     }
 
     .imgg {
+        display: flex;
         width: 100%;
     }
 }
