--- a/styles/style.css
+++ b/styles/style.css
@@ -190,6 +190,13 @@ strong {
         background-image: linear-gradient(9deg, #2626267e, transparent);
     }
 
+    .nav__item:hover{
+        transition: all 0.3s;
+        border: 0.1px solid transparent;
+        border-left: 5px solid var(--tirdy__color);
+    }
+
+
     #navContainer {
         transition: all 1s;
     }
